Adding the ability to select and move around the screens

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   gap: ^3.0.1
   lint: ^2.1.2
+  google_fonts: ^5.1.0
 
 dev_dependencies:
   flutter_test:
